k8s/aws_eks_demo/browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbp-browser-deployment
  # namespace: nbp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nbp-browser
  template:
    metadata:
      labels:
        app: nbp-browser
    spec:
      containers:
        - name: nbp-broswer-container
          image: xuerong/nbp-browser:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nbp-browser-service
  # namespace: nbp
spec:
  selector:
    app: nbp-browser
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
